Guard render link template against missing page output format

--- a/layouts/_default/_markup/render-link.html
+++ b/layouts/_default/_markup/render-link.html
@@ -1,6 +1,11 @@
 {{- $destination := .Destination -}}
 {{- $isYouTube := gt (len (findRE `^https?://(www\.)?(youtube\.com|youtu\.be)/` $destination)) 0 -}}
-{{- $isHTML := eq .Page.OutputFormat.Name "HTML" -}}
+{{- $isHTML := false -}}
+{{- with .Page -}}
+  {{- with .OutputFormat -}}
+    {{- $isHTML = eq .Name "HTML" -}}
+  {{- end -}}
+{{- end -}}
 {{- if and $isYouTube $isHTML -}}
 <a href="{{ $destination | safeURL }}"{{ with .Title }} title="{{ . }}"{{ end }}{{ range $k, $v := .Attributes }} {{ $k }}="{{ $v }}"{{ end }}{{ if not (and .Attributes (isset .Attributes "data-lite-youtube-link")) }} data-lite-youtube-link="true"{{ end }}>{{ .Text | safeHTML }}</a>
 {{- else if $isYouTube -}}
